--- a/.github/workflows/test-restart.yml
+++ b/.github/workflows/test-restart.yml
@@ -1,16 +1,20 @@
-name: Test SSH Restart Script
+name: test-ssh-restart
 
 on:
-  workflow_dispatch:  # allows manual trigger
+  workflow_dispatch:
 
 jobs:
-  test-ssh-restart:
+  restart:
     runs-on: ubuntu-latest
     steps:
-      - name: Run SSH command to restart both services
-        run: |
-          echo "$SSH_KEY" > key.pem
-          chmod 600 key.pem
-          ssh -i key.pem -o StrictHostKeyChecking=no USERNAME@HOST
-        env:
-          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Create SSH key file
+      run: |
+        echo "$SSH_KEY" > key.pem
+        chmod 600 key.pem
+      env:
+        SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: Trigger restart.sh and confirm
+      run: |
+        ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} \
+        '/home/${{ secrets.SSH_USERNAME }}/restart.sh && echo "✅ restart.sh executed" && tail -n 10 /home/${{ secrets.SSH_USERNAME }}/restart.log'
