--- a/.github/workflows/test-restart.yml
+++ b/.github/workflows/test-restart.yml
@@ -17,11 +17,15 @@ jobs:
 
       - name: Run remote restart scripts
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} '
-            echo "🔁 Restarting change-detection-internal..." ;
-            /home/${{ secrets.SSH_USERNAME }}/restart.sh change-detection-internal || echo "⚠️ change-detection-internal restart failed" ;
-            echo "🔁 Restarting n8n..." ;
-            /home/${{ secrets.SSH_USERNAME }}/restart.sh n8n || echo "⚠️ n8n restart failed" ;
-            echo "✅ Restart attempt completed." ;
-            echo "📄 Last 10 lines of restart log:" ;
-            tail -n 10 /home/${{ secrets.SSH_USERNAME }}/restart.log'
+          ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} << 'EOF'
+            set -e
+            echo "🔁 Restarting change-detection-internal..."
+            /home/${{ secrets.SSH_USERNAME }}/restart.sh change-detection-internal || echo "⚠️ change-detection-internal restart failed"
+
+            echo "🔁 Restarting n8n..."
+            /home/${{ secrets.SSH_USERNAME }}/restart.sh n8n || echo "⚠️ n8n restart failed"
+
+            echo "✅ Restart attempt completed."
+            echo "📄 Last 10 lines of restart log:"
+            [ -f /home/${{ secrets.SSH_USERNAME }}/restart.log ] && tail -n 10 /home/${{ secrets.SSH_USERNAME }}/restart.log || echo "⚠️ restart.log not found"
+          EOF
